--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1>ようこそ！まるまるの部屋へ</h1>
   
     <p>どうも、"まるまるの部屋"の管理人である"まるまる"です。</p>
-    <p>この部屋はまるまるにとって初めて作ったホームページであり、勉強と練習がてら書いています。この部屋ではまるまるが今まで考えたことや学んだことを色々書いていくことにしました。<a href="about.html">自己紹介</a>にもある通りまるまるは大学院で物理学の研究をしているので、書く内容は物理学や解析に関することが多めになると思いますが、この部屋では「知識が無い人でもテーマの7割が理解できる」ことを目標にしています<a href="note-1.html">詳しくはこちら</a>。</p>
+    <p>この部屋はまるまるにとって初めて作ったホームページであり、勉強と練習がてら書いています。この部屋ではまるまるが今まで考えたことや学んだことを備忘録的に色々書いていくことにしました。<a href="about.html">自己紹介</a>にもある通りまるまるは大学院で物理学の研究をしているので、書く内容は物理学や解析に関することが多めになると思いますが、この部屋では「知識が無い人でもテーマの7割が理解できる」ことを目標にしています<a href="note-1.html">詳しくはこちら</a>。</p>
     <p>以下がMenuとその内容になります。</p>
 
     <div class="about-contents">
